welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
override def run() {
avance()
avance()
gauche()
def dam2()
{
	def dam()
{
	for(c <- 1 to 4)
	{
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	droite()
	avance()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	droite()
	avance()
	droite()
	avance()
	avance()
	droite()
	avance()
	avance()
	droite()
	droite()	 
	}
	
}
for(c2 <- 1 to 9) {
	dam()
droite()
for(c <- 1 to 5) {
avance()
}
gauche()
}
}
def dam3()
{
	dam2()

for(c3 <- 1 to 5){
	avance()
}
 for(c5 <- 1 to 9){
 	dam3()
 	}
 }
}
dam2()

for(c3 <- 1 to 5){
	avance()
}
dam2()
for(c3 <- 1 to 5){
	avance()
}
dam2()

for(c4 <- 1 to 5){
	avance()
}
droite()
recule()
recule()
}

